# XML::TreePP Changes

2013/11/07 (0.42)
    * add empty_element_tag_end option. thanks to Songmu
      https://github.com/kawanet/XML-TreePP/pull/2
    * ensure unicode transmitted proprely. thanks to xenoterracide
      https://github.com/kawanet/XML-TreePP/pull/1
    * it requires LWP 5.811 or later to use add_content_utf8 method in HTTP::Message
    * source repository is now on github
      https://github.com/kawanet/XML-TreePP

2010/10/31 (0.41)
    * require_xml_decl option added. thanks to nicomen
      https://rt.cpan.org/Ticket/Display.html?id=42441
    * empty element when #text node is undef
      http://www.kawa.net/works/perl/treepp/treepp.html#com-2009-07-23T16:38:09Z

2009/11/21 (0.40)
    * pod typo fix: (thanks to jkutej)
      http://annocpan.org/~KAWASAKI/XML-TreePP-0.39/lib/XML/TreePP.pm#note_2382

2009/06/30 (0.39)
    * parsehttp now uses decoded_content method under LWP 5.802.
      This allows compressed content by Content-Encoding: gzip, etc.
      (thanks to cormanaz and ikegami)
      http://perlmonks.org/?node_id=774537
      http://rt.cpan.org/Public/Bug/Display.html?id=47336

2009/03/01 (0.38)
    * dies by "Invalid tree" when write() is called without a hash argument.
    * warns by "Unsupported reference type" when write() is called with 
      a tree which contains unsupported references, ex. BLOBREF.
      It avoids  "Not a HASH reference" and "Can't use string as a HASH ref."
    * dies by "Unknown encoding" when unknown encoding is used.
    * No new features are added at this version except for the messages above.

2009/01/17 (0.37)
    * new option: xml_deref dereferences the numeric character references, 
      like &#xEB;, &#28450; etc. 
      Now UTF-8 flag is correctly treated. (thanks to haarg)
      http://rt.cpan.org/Public/Bug/Display.html?id=42347
    * without xml_deref option, the numeric character references between 
      U+0080 and U+00FF are not dereferenced any more.