@@ -20,4 +20,4 @@ no_index:
 requires:
   LWP: 5.811
   Test::More: 0
-version: 0.42
+version: 0.43
